# DNA

./: .env.example  .gitignore  INSTALL.md  README.md  datadna.txt  docker-compose.yml  install.sh  one_click_install.sh  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  analyze_dna.py  api.py  app.py  config_check.py  conftest.py  deployment.env  fly.toml  install_mongodb.sh  jest.config.js  jest.setup.js  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.js  setup.py  verify_environment.py  verify_python_deps.py  wsgi.py
backend/__tests__/: ai.test.js  auth.test.js  okx.test.js  task.test.js  user.test.js
backend/__tests__/controllers/: aiController.test.js  imageAnalysisController.test.js  userController.test.js
backend/__tests__/middleware/: errorMiddleware.test.js  logger.test.js  validateMiddleware.test.js
backend/__tests__/routes/: apiRoutes.test.js
backend/api/: __init__.py  config.py  main.py
backend/api/config/: config.template.py
backend/api/routers/: analysis.py
backend/app/: config.py  config.template.py  main.py
backend/config/: config.js  db.js
backend/controllers/: aiController.js  imageAnalysisController.js  taskController.js  userController.js
backend/coverage/: lcov.info
backend/middleware/: authMiddleware.js  validateMiddleware.js
backend/minimal/: config.py  main.py
backend/models/: Task.js  User.js
backend/routes/: analysis.js  apiRoutes.js  taskRoutes.js
backend/services/: deepseekService.js  okxService.js
backend/tests/: conftest.py  test_analysis.py  test_analysis_pipeline.py  test_dna_analysis.py  test_ollama_service.py
dna-backend/: .coverage  .env.example  pyproject.toml  pytest.ini  requirements.txt  setup.py
dna-backend/app/: config.py  main.py
dna-backend/tests/: conftest.py  test_analysis.py  test_chinese_text.py  test_claude_service.py  test_deepseek_service.py
docs/: api.md  (+1 more)
(+121 files in other folders)
