[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-backend"
version = "0.1.0"
description = "DNA Analysis Backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests==2.31.0"
]

[tool.setuptools]
packages = ["backend"]
