[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dna-backend"
version = "0.1.0"
description = "DNA Analysis Backend"
authors = ["Devin <devin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
requests = "2.31.0"
