[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-analysis"
version = "1.0.0"
description = "DNA Analysis API with local-first model architecture"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "motor>=3.7.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.1",
    "pydantic>=2.5.2"
]
